@@ -512,6 +512,7 @@ Brad Turcotte
 Kyle Turman
 Jon Turney
 Junichi Uekawa
+Max Ulidtko
 Igor Vlasenko
 István Váradi
 Martijn van Beers
